--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,34 @@
 .tab {
-    width: 1200px;
+    width: 100%;
+}
+.tab_header{
+    width:80%;
+    margin-left: 10%;
 }
 
 .tab1e {
     position: absolute;
-    left: 105px;
-    top: 25px;
-    width: 1100px;
+    left: 10%;
+    top: 25%;
 }
 
 .table_full {
     position: relative;
-    left: 105px;
-    top: 0px;
-    width: 900px;
+    left: 10%;
 }
+.width_table{
+    width: 80%;
+}
+
+.table_header{
+    width: 18%;
+}
+
 .table_text{
-    width: 120px;
+    width: 18%;
 }
 .block {
-    width: 1300px;
+    width: 100%;
     position: relative;
 }
 
@@ -43,6 +52,7 @@
     border: 5px solid #FFFFFF;
     border-radius: 50%;
     left: 10px;
+    width: 5%;
 }
 
 .box{
@@ -66,15 +76,13 @@
 
 .button {
     position: absolute;
-    right: 10px;
-    top: -10px;
-    height: 100px;
-    width: 100px;
+    right: 2%;
+    top: -15%;
+    width: 8%;
 }
 
 .Get_histogram{
-    position: absolute;
-    left:1200px;
+    float: right;
 }
 
 #overflow {
@@ -85,15 +93,4 @@
     width: 100%;
     height: 100%;
     background-color: rgba(255, 255, 255, 0.9);
-}
-
-#Gender_users {
-    position: absolute;
-    width: 1000px;
-    left:50%;
-    margin-left: -500px;
-    top:500px;
-    height: 600px;
-    margin-top: -300px;
-    background: #FFFFFF;
 }
